--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,7 @@
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "no-referrer"
     X-Content-Type-Options = "nosniff"
+    X-Clacks-Overhead = "GNU Terry Pratchett"
     
     
 [[headers]]
